src/test/ui/iterators/collect-into-slice.stderr
error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/collect-into-slice.rs:8:9
   |
LL |     let some_generated_vec = (0..10).collect();
   |         ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/collect-into-slice.rs:8:38
   |
LL |     let some_generated_vec = (0..10).collect();
   |                                      ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                ^ required by this bound in `collect`

error[E0277]: a slice of type `[i32]` cannot be built since `[i32]` has no definite size
  --> $DIR/collect-into-slice.rs:8:30
   |
LL |     let some_generated_vec = (0..10).collect();
   |                              ^^^^^^^ ------- required by a bound introduced by this call
   |                              |
   |                              try explicitly collecting into a `Vec<{integer}>`
   |
   = help: the trait `FromIterator<{integer}>` is not implemented for `[i32]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
